# ai-workspace

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json
aiws-host-memory/: README.md  pyproject.toml
aiws-host-memory/aiws_host_memory/: __init__.py  app.py  cli.py
core-aiws/: README.md
core-aiws/.claude-plugin/: plugin.json
core-aiws/contracts/: core-aiws.contract.json  plugin-contract.schema.json  plugin-registry.md  project-memory-bridge.md  shared-memory-bridge.md  shared-memory-import.md
core-aiws/protocols/: auto-capture.md  cursor-delegation.md  escalation.md  self-improvement.md  session-log.md  sop.md
data-analysis-aiws/: .mcp.json  README.md
data-analysis-aiws/.claude-plugin/: plugin.json
data-analysis-aiws/agents/: customer-rep.md  data-analyst.md
data-analysis-aiws/bootstrap/: BOOTSTRAP.md  BOOTSTRAP_PROMPT.md
data-analysis-aiws/contracts/: data-analysis-aiws.contract.json
data-analysis-aiws/references/: README.md  experiment-and-observational-caveats.md  hypothesis-and-evidence.md  metric-definitions.md  source-hierarchy.md  stakeholder-readouts.md
data-analysis-aiws/scripts/: stage_shared_memory_candidate.py
data-analyst-aiws/: README.md
data-analyst-aiws/.claude-plugin/: plugin.json
data-analyst-aiws/bootstrap/: BOOTSTRAP.md  BOOTSTRAP_PROMPT.md
data-analyst-aiws/contracts/: data-analyst-aiws.contract.json
docs/: ai-workspace-architecture.md  ai-workspace-github-rollout-strategy.md
memory-aiws/: README.md
memory-aiws/memory/: MEMORY.md
software-engineer-aiws/: README.md
tests/: test_aiws_memory.py
(+46 files in other folders)
