[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aiws-host-memory"
version = "0.3.1"
description = "Host-side shared-memory helper for the ai-workspace Claude plugin family."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Sasha Kang" }
]
dependencies = []

[project.scripts]
aiws-host-memory = "aiws_host_memory.cli:main"

[tool.setuptools]
packages = ["aiws_host_memory"]
